add style and layout

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <html>
-	
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="main.css">
+		<title>git learning</title>
+
+	</head>
+	<body>
+		<div class="word">fkdjfdjfkdkfjdjf</div>
+		<div class="img"><img src="89772600.jpg" alt=""></div>
+	</body>
 </html>
